# ai-memory-vault

./: .gitignore  BENCHMARK_PLAN.md  IMPROVEMENT_PLAN.md  PLAN.md  pyproject.toml
bench/: README.md  judge_prompt.txt  report.html  run_custom.py  run_locomo.py
scripts/: com.aimemory.reindex.plist  com.aimemory.server.plist  com.aimemory.watchdog.plist  context-prompt.txt  setup-macos.sh  setup-mcp.sh  watchdog.sh
src/aimemory/: __init__.py  cli.py  config.py  retriever.py  server.py
